feature(applicant): added applicant structure and implemented architecture in project

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-
+<main class="main-container">
+  <img src="assets/images/logo.png" alt="Icetec - Logo" class="logo mb-5">
+  <div class="mb-3 row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+    <div class="col-sm-12">
+      <input type="text" class="form-control" id="staticEmail">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+    <div class="col-sm-12">
+      <input type="password" class="form-control" id="inputPassword">
+    </div>
+  </div>
+</main>
