feature(applicant): added find

--- a/src/app/applicant/components/list/applicant-list.component.html
+++ b/src/app/applicant/components/list/applicant-list.component.html
@@ -1,6 +1,11 @@
 <div class="container-fluid mt-5">
   <a [routerLink]="['/applicant', 'create']">Add applicant</a>
-  <input class="form-control float-right col-3 mb-3" placeholder="Find">
+  <select name="technology" id="technology" (change)="find($event.target)" class="form-control float-right col-3 mb-2">
+    <option value="">Choose an option</option>
+    <option [value]="technology.id" (change)="find($event.target)" *ngFor="let technology of technologies">
+      {{technology.name}}
+    </option>
+  </select>
   <table class="table">
     <thead>
     <tr>
