feature(auth): added logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="container-fluid">
     <img src="/assets/images/logo.png" alt="Logo" width="60" height="56"
          class="d-inline-block align-middle rounded-circle">
+    <button class="btn btn-outline-light" (click)="logout()">Logout</button>
   </div>
 </nav>
 <div class="container">
